# Learn_HowToCreateObject

./: .gitignore  CMakeLists.txt  README.md  create_object_test_case.cmake  is_test_case.cmake
GarbageCollection/: CMakeLists.txt  TODO.md
GarbageCollection/GC/: garbage_collector.hpp  gc_object.hpp  gc_object_base.hpp
GarbageCollection/SingletonManager/: singleton_manager-internal.hpp  singleton_manager.hpp
InterfacePattern/: CMakeLists.txt  interface_pattern.cpp
InterfacePattern/Interface/: interface_gettable.hpp  interface_id.hpp  interface_settable.hpp  interface_unknown.hpp
InterfacePattern/Object/: get_set_able_object.hpp  gettable_object.hpp  object.hpp  settable_object.hpp
InterfacePattern/Test_Interface/: CMakeLists.txt
MemoryPool/: CMakeLists.txt  main_memory_pool.cpp  memory.hpp  memory_pool.cpp
MemoryPool/Allocator/: caching_allocator.hpp  naive_allocator.hpp
MemoryPool/AllocatorCallback/: allocator_callback.hpp
MemoryPool/AllocatorMemory/: allocator_memory.hpp
MemoryPool/Delegate/: debug_delegate.hpp
MemoryPool/Memory/: cpu_memory.hpp  memory.hpp  physical_memory.hpp
MemoryPool/PoolAllocator/: pool_allocator.cpp  pool_allocator.hpp
NativeAllocate/: CMakeLists.txt  c_style_calloc_free.cpp  c_style_malloc_free.cpp  c_style_realloc_free.cpp  cxx_style_new_delete.cpp  cxx_style_placement_new_for_class_array.cpp  cxx_style_stl_allocator_for_class_array.cpp  cxx_style_stl_allocator_traits.cpp
ObjectFactory/: CMakeLists.txt
ObjectFactory/Object/: get_set_able_object.hpp  gettable_object.hpp
ObjectFactory/Test_Interface/: CMakeLists.txt  test_interface_exe.cpp
RTTIClassMemAddIDFactory/: CMakeLists.txt  class_member_address_id_factory.cpp
RTTIClassMemAddIDFactory/Entity/: mono_game_actor.hpp  mono_game_boss_enemy.hpp  mono_game_camera.hpp  mono_game_enemy.hpp  mono_game_entity.hpp  mono_game_final_boss_enemy.hpp  mono_game_fps_camera.hpp  mono_game_legend_player.hpp  mono_game_player.hpp  mono_game_secret_boss_enemy.hpp
RTTIClassMemAddIDFactory/Factory/: entity_factory_with_class_mem_address.hpp
RawPtrEnumFactory/: factory_raw_ptr_with_enum.cpp
SimpleRawPtrFactory/: CMakeLists.txt  factory_raw_ptr_with_enum.cpp  factory_raw_ptr_with_string.cpp
SimpleRawPtrFactory/Factory/: factory_enum.hpp  factory_string.hpp
SimpleRawPtrFactory/GameEntity/: game_actor.hpp  game_camera.hpp  game_enemy.hpp  game_entity.hpp  game_player.hpp
SmartPointer/: CMakeLists.txt  cxx_style_enable_shared_from_this.cpp  cxx_style_shared_ptr.cpp  cxx_style_unique_ptr.cpp  cxx_style_void_shared_ptr.cpp  cxx_style_weak_ptr.cpp  sp_enable_shared_from_this.cpp  sp_shared_ptr.cpp  sp_thread_save_ref_ptr.cpp  sp_unique_ptr.cpp  sp_void_shared_ptr.cpp  sp_weak_ptr.cpp  thread_save_ref_ptr.hpp
SmtPtrFactory/: CMakeLists.txt  factory_key_string_value_fanctor_and_smt_ptr_with_interface.cpp
SmtPtrFactory/SmtPtrFactory/: game_entity_factory.hpp
SmtPtrFactory/SmtPtrGameEntity/: game_actor.hpp  game_base_entity.hpp  game_boss_enemy.hpp  game_camera.hpp  game_enemy.hpp  game_entity.hpp  game_final_boss_enemy.hpp  game_fps_camera.hpp  game_legend_player.hpp  game_player.hpp
SmtPtrPlugin/: CMakeLists.txt  basic_plugin_manager_host.cpp  basic_plugin_manager_host.hpp  main_plugin_host.cpp  plugin.hpp  plugin_configure.cmake  plugin_host.cpp  plugin_host.hpp  plugin_manager_host.cpp  plugin_manager_host.hpp  test_static_func_invoked_in_template_func.cpp  winapi_plugin_manager_host.cpp  winapi_plugin_manager_host.hpp
SmtPtrPlugin/Host/: basic_plugin.cpp  basic_plugin.hpp  derived_plugin_manager_host.cpp  derived_plugin_manager_host.hpp  plugin_host.cpp  plugin_host.hpp  plugin_manager_base_host.cpp  plugin_manager_base_host.hpp  plugin_manager_host.cpp  plugin_manager_host.hpp  plugin_tag.hpp  transform_char.cpp  transform_char.hpp
SmtPtrPlugin/Host/Windows/: transform_char.hpp
SmtPtrPlugin/LinuxDllPlugin/: CMakeLists.txt  version.hpp.in
SmtPtrPlugin/MacDllPlugin/: CMakeLists.txt  defs.hpp  mac_dll_plugin.cpp  mac_dll_plugin.hpp  macos_framework.cpp  macos_framework.hpp  version.hpp.in
SmtPtrPlugin/MacDllPlugin/mac_plugin/: mac_plugin.cpp  mac_plugin.hpp
SmtPtrPlugin/TestCheckMovement/: test_class.cpp  test_class.hpp
SmtPtrPlugin/WinDllPlugin/: CMakeLists.txt  basic_module.cpp  basic_module.hpp  defs.hpp  defs_plugin.hpp  version.hpp.in  win_api_plugin.cpp  win_api_plugin.hpp  win_dll_plugin.cpp  win_dll_plugin.hpp  win_plugin.cpp  win_plugin.hpp  winapi_module.hpp  windows_framework.cpp  windows_framework.hpp  windows_version.cpp  windows_version.hpp
SmtPtrPlugin/WinDllPlugin/basic_plugin/: basic_plugin.cpp  basic_plugin.hpp
SmtPtrPlugin/WinDllPlugin/winapi_plugin/: winapi_plugin.cpp  winapi_plugin.hpp
SmtPtrPlugin/WinDllPlugin/winmfc_plugin/: winmfc_plugin.cpp  winmfc_plugin.hpp
SophisticatedMemoryPool/Allocator/: allocator.hpp
SophisticatedMemoryPool/Memory/: memory.hpp
TemplateDistributedFactory/: CMakeLists.txt  TODO.md  system_init_for_register.hpp  template_distributed_factory.cpp
TemplateDistributedFactory/DistributedFactory/: preprocessor_magic.hpp  template_distributed_database.hpp  template_distributed_dbitem.hpp  template_distributed_registry.hpp
TemplateDistributedFactory/FunctionEntity/: function.hpp  function_base.hpp  function_base_binary.hpp  function_base_unary.hpp  function_binary.hpp  function_unary.hpp  operator_base_binary.hpp  operator_base_unary.hpp  type_tag.hpp
TemplateDistributedFactory/FunctionEntity/Generic/: function_add.cpp  function_add.hpp  function_pow.cpp  function_pow.hpp  function_sin.cpp  function_sin.hpp
TemplateDistributedFactory/FunctionEntity/Omit/: function_base_binary.hpp  function_binary.hpp
TemplateDistributedFactory/FunctionOperand/: array.hpp  array_base.hpp  array_derived.hpp
TemplateDistributedFactory/SingletonManager/: singleton_manager.cpp
